feat: swap to stripe identity verificaiton modal
