# apps/api/internal/service/domain/account/stripe.go
@@ -3,6 +3,7 @@ package account
 import (
 	"context"
 	"fundlevel/internal/entities/account"
+	"fundlevel/internal/service/types"
 	"strconv"
 
 	"github.com/stripe/stripe-go/v81"
@@ -21,21 +22,26 @@ func (s *AccountService) GetStripeIdentity(ctx context.Context, accountID int) (
 	return s.repositories.Account().GetStripeIdentity(ctx, accountID)
 }
 
-func (s *AccountService) GetStripeIdentityVerificationSessionURL(ctx context.Context, accountID int, returnURL string) (string, error) {
+func (s *AccountService) GetStripeIdentityVerificationSessionURL(ctx context.Context, accountID int, returnURL string) (types.StripeSessionOutput, error) {
 	stripe.Key = s.stripeAPIKey
+	
+	result := types.StripeSessionOutput{}
 
 	// Create the session
 	params := &stripe.IdentityVerificationSessionParams{
-		Type: stripe.String(string(stripe.IdentityVerificationSessionTypeDocument)),
+		Type:              stripe.String(string(stripe.IdentityVerificationSessionTypeDocument)),
 		ClientReferenceID: stripe.String(strconv.Itoa(accountID)),
-		ReturnURL: stripe.String(returnURL),
+		ReturnURL:         stripe.String(returnURL),
 	}
 
 	vs, err := verificationsession.New(params)
 	if err != nil {
-		return "", err
+		return result, err
 	}
 
 	// Return only the session URL to the frontend.
-	return vs.URL, nil
+	result.URL = vs.URL
+	result.ClientSecret = vs.ClientSecret
+
+	return result, nil
 }
