# apps/api/internal/service/types/stripe.go
@@ -1,0 +1,6 @@
+package types
+
+type StripeSessionOutput struct {
+	URL          string `json:"url" form:"uri"`
+	ClientSecret string `json:"client_secret"`
+}
